# Telecom-Customer-Churn-MLOps

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt  secrets.txt  setup.py
.github/workflows/: aws.yaml
config/: schema.yaml
notebook/: experiment_notebook1.ipynb  rf_pipeline.pkl
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: CustomerData.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
static/css/: style.css
templates/: vehicledata.html
